syntax = "proto3";

package pb;

import "barber/barber_managers.proto";

option go_package = "barbershop/src/pb/barber";


message GetBarberManagersRequest{
    string id = 1;
}

message GetBarberManagersResponse {
    BarberManagers barber_manager = 1;
}